--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "server:dev": "bun run --watch index.ts",
-    "server": "bun run index.ts",
-    "deploy": "bun run deploy.ts"
+    "server": "deno run --allow-read --allow-sys --allow-net --allow-env index.ts",
+    "deploy": "deno run --allow-read --allow-sys --allow-net --allow-env deploy.ts"
   },
   "devDependencies": {
+    "@types/turndown": "^5.0.3",
     "bun-types": "latest"
   },
   "peerDependencies": {
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "discord.js": "^14.13.0",
-    "tslog": "^4.9.2"
+    "node-html-parser": "^6.1.11",
+    "tslog": "^4.9.2",
+    "turndown": "^7.1.2"
   }
 }
