--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "deploy": "deno run --allow-read --allow-sys --allow-net --allow-env deploy.ts"
   },
   "devDependencies": {
-    "@types/turndown": "^5.0.3",
-    "bun-types": "latest"
+    "@types/turndown": "^5.0.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
